test/ui/tests/packages/circular-components-from-distinct-packages/package.stderr
error: the components `right` and `left` are circular
 --> ${TEST_FOLDER}/packages/circular-components-from-distinct-packages/right/package.metadata:5:72
  |
5 | components: [ { type: library, path: "content.lushui", dependencies: { left: { path: ".." } } } ],
  |                                                                        ^^^^
  |

error: aborting due to previous error

